Create Home page.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tugether</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="LoginBox">
         <div class="brand">
-            <img class="logo" src="asset/19eff9b8125bb9fa4eae986fb9feeab43db902e1-removebg-preview.png" alt="TUgether Logo">
+            <img class="logo" src="asset/19eff9b8125bb9fa4eae986fb9feeab43db902e1-removebg-preview.png"
+                alt="TUgether Logo">
             <div class="brand-text">
                 <h1>TUgether</h1>
                 <h2>Building Community Together</h2>
@@ -24,4 +27,5 @@
         <small>- Only @dome.tu.ac.th emails are accepted</small>
     </div>
 </body>
+
 </html>
