--- a/home.html
+++ b/home.html
@@ -107,6 +107,38 @@
 </div>
 <script src="home.js"></script>
 </body>
+<div id="eventDetailModal" class="modal">
+  <div class="modal-content event-modal">
+    <div class="modal-header">
+      <h2 id="eventTitle">TUgether Career Fair 2025</h2>
+      <span class="close">&times;</span>
+    </div>
+
+    <div class="modal-body">
+      <div class="event-info">
+        <p>📅 <span id="eventDate">15 ตุลาคม 2568</span></p>
+        <p>⏰ <span id="eventTime">10:00</span></p>
+        <p>👥 <span id="eventRegister">2/50 registered</span></p>
+      </div>
+
+      <span class="event-category" id="eventCategory">CAREER</span>
+
+      <p id="eventDescription">
+        Connect with leading tech companies and explore career opportunities.
+        Come together with industry professionals and fellow students!
+      </p>
+
+      <div class="event-organizer">
+        Organized by: <strong id="eventOrganizer">admin@dome.tu.ac.th</strong>
+      </div>
+    </div>
+
+    <div class="modal-footer">
+      <button id="closeEventModal" class="cancel">Close</button>
+      <button id="registerEvent" class="register">Register</button>
+    </div>
+  </div>
+</div>
 </body>
 
 </html>
