--- a/home.html
+++ b/home.html
@@ -43,6 +43,24 @@
         <div class="events-header">
           <h3>Upcoming Events</h3>
         </div>
+		
+		<div class="search-container">
+		  <input type="text" id="searchInput" placeholder="Search events..." />
+		  <select id="categoryFilter">
+		    <option value="">All</option>
+		    <option value="Career">Career</option>
+		    <option value="Technology">Technology</option>
+		    <option value="Sports">Sports</option>
+		    <option value="Culture">Culture</option>
+		  </select>
+		  <select id="dateFilter">
+		    <option value="">All Dates</option>
+		    <option value="today">Today</option>
+		    <option value="this-week">This Week</option>
+		    <option value="next-week">Next Week</option>
+		  </select>
+		</div>
+
 
         <div class="event-list">
           <div class="event-card">
