--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tugether</title>
     <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="responsive.css" />
 </head>
 
 <body>
