--- a/index.html
+++ b/index.html
@@ -1,49 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tugether</title>
+    <title>TUgether - Login</title>
     <link rel="stylesheet" href="styles.css">
-<link rel="stylesheet" href="responsive.css" />
 </head>
 
 <body>
+
     <div class="LoginBox">
+
         <div class="brand">
-            <img class="logo" src="asset/19eff9b8125bb9fa4eae986fb9feeab43db902e1-removebg-preview.png"
+            <img class="logo"
+                src="asset/19eff9b8125bb9fa4eae986fb9feeab43db902e1-removebg-preview.png"
                 alt="TUgether Logo">
+
             <div class="brand-text">
                 <h1>TUgether</h1>
                 <h2>Building Community Together</h2>
             </div>
         </div>
+
         <p class="tagline">Connect with the TU community</p>
-        <label for="emailInput">Email</label>
-        <input type="email" id="emailInput" placeholder="your.name@dome.tu.ac.th" autocomplete="email">
+
+        <label for="studentIdInput">Student ID</label>
+        <input type="text" id="studentIdInput" placeholder="Enter your student ID" autocomplete="username">
+
         <label for="passwordInput">Password</label>
         <input type="password" id="passwordInput" placeholder="Enter your password" autocomplete="current-password">
+
         <button id="submitButton">Login to TUgether</button>
-        <small>- Only @dome.tu.ac.th emails are accepted</small>
+
+        <small>Use your TU student ID to login</small>
     </div>
 
+
     <script>
-        document.getElementById('submitButton').addEventListener('click', function (e) {
+        document.getElementById('submitButton').addEventListener('click', async function (e) {
             e.preventDefault();
-            var email = document.getElementById('emailInput').value.trim();
-            var password = document.getElementById('passwordInput').value.trim();
-            if (!email || !password) {
-                alert('กรุณากรอกอีเมลและรหัสผ่าน');
+
+            const studentId = document.getElementById('studentIdInput').value.trim();
+            const password = document.getElementById('passwordInput').value.trim();
+
+            if (!studentId || !password) {
+                alert('กรุณากรอก Student ID และรหัสผ่าน');
                 return;
             }
-            if (!email.endsWith('@dome.tu.ac.th')) {
-                alert('กรุณากรอกอีเมล @dome.tu.ac.th');
-                return;
+
+            try {
+                const tuLoginResponse = await fetch('http://localhost:8081/api/auth/tu-login', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json; charset=UTF-8' },
+                    body: JSON.stringify({ username: studentId, password: password })
+                });
+
+                const tuResult = await tuLoginResponse.json();
+
+                if (tuResult.status) {
+                    console.log('✅ TU Login สำเร็จ');
+
+                    const profileResponse = await fetch(`http://localhost:8081/api/profile/std-info?id=${studentId}`);
+                    const profileData = await profileResponse.json();
+
+                    const email = profileData.data?.email || `${studentId}@dome.tu.ac.th`;
+                    const name = profileData.data?.displayname_th || profileData.data?.displayname_en || studentId;
+
+                    console.log('📧 Email:', email);
+                    console.log('👤 Name:', name);
+
+                    const userResponse = await fetch('http://localhost:8081/api/users/findOrCreate', {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json; charset=UTF-8' },
+                        body: JSON.stringify({
+                            email: email,
+                            name: name,
+                            studentId: studentId
+                        })
+                    });
+
+                    const userData = await userResponse.json();
+
+                    if (userData.success) {
+                        localStorage.setItem('studentId', studentId);
+                        localStorage.setItem('userEmail', userData.email);
+                        localStorage.setItem('userName', userData.name);
+
+                        console.log('✅ เก็บ userId:', userData.userId);
+
+                        alert('✅ Login สำเร็จ!');
+                        window.location.href = 'home.html';
+                    } else {
+                        alert('❌ ไม่สามารถสร้าง User ได้: ' + userData.message);
+                    }
+
+                } else {
+                    alert('❌ Login ไม่สำเร็จ: ' + tuResult.message);
+                }
+
+            } catch (error) {
+                console.error('Error:', error);
+                alert('⚠️ เกิดข้อผิดพลาดในการ login');
             }
-            window.location.href = 'home.html';
+        });
+
+        document.getElementById('passwordInput').addEventListener('keypress', function (e) {
+            if (e.key === 'Enter') {
+                document.getElementById('submitButton').click();
+            }
         });
     </script>
-</body>
 
+</body>
 </html>
