build role and users database

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -37,6 +37,9 @@
     </div>
 
 
+    <!-- ================================
+         Login Script
+    ================================= -->
     <script>
         document.getElementById('submitButton').addEventListener('click', async function (e) {
             e.preventDefault();
@@ -50,61 +53,52 @@
             }
 
             try {
-                const tuLoginResponse = await fetch('http://localhost:8081/api/auth/tu-login', {
+                const response = await fetch('http://localhost:8081/api/auth/tu-login', {
                     method: 'POST',
-                    headers: { 'Content-Type': 'application/json; charset=UTF-8' },
+                    headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ username: studentId, password: password })
                 });
 
-                const tuResult = await tuLoginResponse.json();
+                const result = await response.json();
 
-                if (tuResult.status) {
-                    console.log('✅ TU Login สำเร็จ');
+                if (result.status) {
+                    // ✅ Login สำเร็จ
+                    localStorage.setItem('studentId', studentId);
 
-                    const profileResponse = await fetch(`http://localhost:8081/api/profile/std-info?id=${studentId}`);
-                    const profileData = await profileResponse.json();
-
-                    const email = profileData.data?.email || `${studentId}@dome.tu.ac.th`;
-                    const name = profileData.data?.displayname_th || profileData.data?.displayname_en || studentId;
-
-                    console.log('📧 Email:', email);
-                    console.log('👤 Name:', name);
-
-                    const userResponse = await fetch('http://localhost:8081/api/users/findOrCreate', {
-                        method: 'POST',
-                        headers: { 'Content-Type': 'application/json; charset=UTF-8' },
-                        body: JSON.stringify({
-                            email: email,
-                            name: name,
-                            studentId: studentId
-                        })
-                    });
-
-                    const userData = await userResponse.json();
-
-                    if (userData.success) {
-                        localStorage.setItem('studentId', studentId);
-                        localStorage.setItem('userEmail', userData.email);
-                        localStorage.setItem('userName', userData.name);
-
-                        console.log('✅ เก็บ userId:', userData.userId);
-
-                        alert('✅ Login สำเร็จ!');
-                        window.location.href = 'home.html';
+                    // เก็บข้อมูล user จาก backend (ถ้ามี)
+                    if (result.user) {
+                        localStorage.setItem('userId', result.user.id);
+                        if (result.user.role) {
+                            localStorage.setItem('role', result.user.role);
+                        }
+                        if (result.user.nameTh) {
+                            localStorage.setItem('nameTh', result.user.nameTh);
+                        }
+                        if (result.user.nameEn) {
+                            localStorage.setItem('nameEn', result.user.nameEn);
+                        }
+                        if (result.user.email) {
+                            localStorage.setItem('email', result.user.email);
+                        }
                     } else {
-                        alert('❌ ไม่สามารถสร้าง User ได้: ' + userData.message);
+                        // fallback อย่างน้อยเก็บ role เป็น STUDENT
+                        if (!localStorage.getItem('role')) {
+                            localStorage.setItem('role', 'STUDENT');
+                        }
                     }
 
+                    window.location.href = 'home.html';
                 } else {
-                    alert('❌ Login ไม่สำเร็จ: ' + tuResult.message);
+                    alert('❌ Login ไม่สำเร็จ: ' + (result.message || 'ไม่สามารถเข้าสู่ระบบได้'));
                 }
 
             } catch (error) {
-                console.error('Error:', error);
+                console.error(error);
                 alert('⚠️ เกิดข้อผิดพลาดในการ login');
             }
         });
 
+        // รองรับกด Enter เพื่อ login
         document.getElementById('passwordInput').addEventListener('keypress', function (e) {
             if (e.key === 'Enter') {
                 document.getElementById('submitButton').click();
