--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="user-info">
-        <span>Admin@dome.tu.ac.th</span>
+        <span id="userEmail">Loading...</span>
         <button class="logout">Logout</button>
       </div>
     </div>
@@ -67,7 +67,7 @@
           </select>
         </div>
 
-        <div class="event-list">
+        <div class="event-list" id="allEventsList">
           <div class="event-card">
             <h4>TUgether Career Fair 2025</h4>
             <div class="category">Career</div>
